tests/rosetta/out/Rust/chaos-game.error
rustc: exit status 1
error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
 --> /tmp/chaos-game.rs:4:25
  |
4 |     let height = (width.parse::<f64>().unwrap() * 0.86602540378).parse::<i32>().unwrap();
  |                         ^^^^^
  |
help: you must specify a type for this binding, like `i32`
  |
3 |     let width: i32 = 60;
  |              +++++

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/chaos-game.rs:23:125
   |
23 | ...1, height - 1], vec![((width as f64) / (2 as f64)).parse::<i32>().unwrap(), 0]];
   |                                                       ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/chaos-game.rs:24:48
   |
24 |     let mut px = ((width as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/chaos-game.rs:30:24
   |
30 |         let idx = r[1].parse::<i32>().unwrap();
   |                        ^^^^^ method not found in `i32`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0599, E0689.
For more information about an error, try `rustc --explain E0599`.
